tests/neg/duplicate-names2.fq
bind 0 duplicator : {v: int | $k0 && $k1}

bind 1 duplicated : {v: int | v == 0}

constraint:
  env [1]
  lhs {v : int | v == duplicated}
  rhs {v : int | $k0}
  id 0 tag []

constraint:
  env [1]
  lhs {v : int | v == duplicated}
  rhs {v : int | $k1}
  id 1 tag []

constraint:
  env [0]
  lhs {v : int | v = duplicator}
  rhs {v : int | v > 0}
  id 2 tag []

wf:
  env []
  reft {v : int | $k0}

wf:
  env []
  reft {v : int | $k1}
